[package]
name = "egui_wgpu_backend"
version = "0.8.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2018"
description = "Backend code to use egui with wgpu."
homepage = "https://github.com/hasenbanck/egui_wgpu_backend"
repository = "https://github.com/hasenbanck/egui_wgpu_backend"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
default = []
web = []

[dependencies]
epi = "0.12"
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "c7576553ba01eda61c42d2f3f79e1aef70896432" }
bytemuck = "1.5"
